<resources>
    <string name="app_name">ViennaApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="clave2">Clave</string>
    <string name="correo">correo</string>
    <string name="ingresar">Ingresar</string>
    <string name="configuraciones">Configuraciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inicio">Inicio</string>
    <string name="ver_contratos">Ver Contratos</string>
    <string name="ver_eventos">Ver Eventos</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="salir">Salir</string>
    <string name="solicitar_evento">Solicitar Evento</string>
    <string name="en_esta_seccion_pod_s_editar_toda_tu_informaci_n_personal">En esta seccion podés editar toda tu información personal</string>
    <string name="nombre">Nombre:</string>
    <string name="apellido">Apellido:</string>
    <string name="clave">Clave</string>
    <string name="repetir_clave">Repetir Clave:</string>
    <string name="guardar">Guardar</string>
    <string name="dar_de_baja_mi_cuenta">dar de baja mi cuenta</string>
    <string name="desde_esta_seccion_pod_s_solicitar_un_nuevo_evento">Desde esta seccion podés solicitar un nuevo evento</string>
    <string name="nombre_evento">Nombre Evento</string>
    <string name="nombre_evento2">Nombre Evento</string>
    <string name="fecha_evento">Fecha Evento</string>
    <string name="fecha_evento2">Fecha Evento</string>
    <string name="precio_entrada">Precio Entrada</string>
    <string name="precio_entrada2">Precio Entrada</string>
    <string name="nombre_sala">Nombre Sala</string>
    <string name="bienvenido">Bienvenido!</string>
    <string name="en_esta_seccion_podes_ver_tu_informacion_basica_podes_editarla_desde_configuraciones">En esta seccion podes ver tu informacion basica. Podes editarla desde Configuraciones</string>
    <string name="solicitar">Solicitar</string>
    <string name="estos_son_tus_contratos">Estos son tus contratos</string>
    <string name="precio_contrato">Precio Contrato</string>
    <string name="cancelado">Cancelado</string>
    <string name="fecha_inicio">Fecha Inicio</string>
    <string name="cantidad_asistentes">Cantidad Asistentes</string>
    <string name="una_vez_aceptado_se_realizar_un_nuevo_contrato_detallando_monto_disponible_para_cancelar">Una vez aceptado se realizará un nuevo contrato detallando monto, disponible para cancelar</string>
    <string name="_00_00_0000_00_00_00">00/00/0000 00:00:00</string>
    <string name="fecha_inicio_evento">Fecha Inicio Evento</string>
    <string name="duracion_evento">Duracion Evento</string>
    <string name="d_a_del_evento">Día Del Evento</string>
    <string name="seleccione_el_dia">Seleccione el dia...</string>
    <string name="seleccione_la_hora">Seleccione la hora...</string>
    <string name="hora_dle_evento">Hora Dle Evento</string>
    <string-array name="salas">
        <item>Hugo Del Carril</item>
        <item>Berta Vidal de Battinni</item>
        <item>Foyer</item>
        <item>Salón dorado</item>
        <item>Sala</item>
    </string-array>

    <string-array name="duracion">
        <item>30 minutos</item>
        <item>1 hora</item>
        <item>1 hora y media</item>
        <item>2 horas</item>
        <item>3 horas</item>
    </string-array>
</resources>
