<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/inicio"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_ver_contratos"
            android:icon="@drawable/contratos"
            android:title="@string/ver_contratos" />
        <item
            android:id="@+id/nav_ver_eventos"
            android:icon="@drawable/eventos"
            android:title="@string/ver_eventos" />
        <item
            android:id="@+id/nav_solicitar_evento"
            android:icon="@drawable/solicitar_evento"
            android:title="@string/solicitar_evento" />
    </group>

    <item android:title="@string/salir">
        <menu>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/salir"
                android:title="@string/cerrar_sesion" />
        </menu>
    </item>

</menu>
