<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.verEventos.EventosTab">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/nombre_evento"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <TextView
        android:id="@+id/tvNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/fecha_inicio"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <TextView
        android:id="@+id/tvFechaEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/fecha_inicio"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/cantidad_asistentes"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <TextView
        android:id="@+id/tvCantidadAsistentes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/cantidad_asistentes"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/precio_entrada"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <TextView
        android:id="@+id/tvPrecioEntrada"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/precio_entrada"
        android:importantForAutofill="no"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        android:textSize="18sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="Evento Cancelado"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <CheckBox
        android:id="@+id/chbCancelado"
        android:shadowColor="@color/colorPrimary"
        android:text="@string/cancelado"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnGuardar"
        android:hint="@string/guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="@font/ralewaybold"/>

    </LinearLayout>

</ScrollView>