<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="80dp"
        android:text="@string/bienvenido"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="80dp"
        android:text="@string/en_esta_seccion_podes_ver_tu_informacion_basica_podes_editarla_desde_configuraciones"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"/>


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>


        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:fontFamily="@font/ralewayregular"
            android:textSize="18sp"
            />


        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/correo"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

        <TextView
            android:id="@+id/tvCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="80dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/correo"
            android:importantForAutofill="no"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:fontFamily="@font/ralewayregular"
            android:textSize="18sp"
            />

    <Button
        android:id="@+id/btnEditarPerfil"
        android:hint="@string/configuraciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="@font/ralewaybold"/>

    </LinearLayout>

</ScrollView>