<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.editarPerfil.EditarPerfil">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="80dp"
        android:text="@string/en_esta_seccion_pod_s_editar_toda_tu_informaci_n_personal"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/nombre"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/apellido"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/apellido"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/clave"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <EditText
        android:id="@+id/etClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/clave"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:background="@color/colorSecondary"
        android:text="@string/repetir_clave"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/ralewaybold"/>

    <EditText
        android:id="@+id/etRepetirClave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="80dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/clave"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:fontFamily="@font/ralewayregular"
        />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:text="@string/guardar"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:fontFamily="@font/ralewaybold"/>

        <Button
            android:id="@+id/btnDarBaja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="80dp"
            android:background="#FFFFFF"
            android:fontFamily="@font/ralewaybold"
            android:shadowColor="#BCBCBC"
            android:stateListAnimator="@android:anim/slide_in_left"
            android:text="@string/dar_de_baja_mi_cuenta"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            android:textSize="13sp" />

    </LinearLayout>

</ScrollView>